--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3005",
+  "start": "next start -p 3005",
     "build": "next build",
-    "start": "next start",
+
     "lint": "next lint"
   },
   "dependencies": {
